<resources>
    <string name="app_name">Promote</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_for_register">New User ? Click to Register</string>
    <string name="login">Login</string>
    <string name="join">Join Us</string>
    <string name="loadingText">We are hitting the URL\'s please wait.</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="e_mail">Email</string>
    <string name="phone">Enter 10-digit phone number</string>
    <string name="tag">Let\'s join us.\nBuild your relationship with others</string>
    <string name="already_have_acc">Already have an account?\n Click For Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="otptext">Please enter OTP \nVerify your number</string>
    <string name="enterUrlsTitle">Please Enter the Urls to hit..</string>
    <string name="enterDomain">Enter your domain name.</string>

</resources>