<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Material.Light.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/imagetwo"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/tag"
                android:textColor="@color/purple_700"
                android:textAlignment="center"
                android:textSize="17sp" />

           <!-- <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_style"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:textSize="15sp" />-->

            <EditText
                android:id="@+id/et_reg_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_style"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="15sp" />

           <!-- <EditText
                android:id="@+id/et_reg_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_style"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />-->

           <!-- <EditText
                android:id="@+id/et_reg_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_style"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15sp" />-->



                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="35dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/comfortaa"
                    android:padding="10dp"
                    android:text="@string/join"
                    android:textColor="@android:color/black"
                    app:cornerRadius="60dp" />

                <TextView
                    android:id="@+id/swipeLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/already_have_acc"
                    android:textSize="15sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>